tests/read_only_weak_map/read_only_weak_map.exp
Error ---------------------------------------------------------------------------------------------------- test.js:10:40

Cannot use `K` [1] in an input/output position because `K` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:10:40
   10|     bad (x: number) : $ReadOnlyWeakMap<K, V> { // Error: K in invariant position
                                              ^

References:
   test.js:9:16
    9| class FooK<out K extends {}, V> {
                      ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:22:40

Cannot use `K` [1] in an input/output position because `K` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:22:40
   22|     bad (x: number) : $ReadOnlyWeakMap<K, V> {// Error: K in covariant position
                                              ^

References:
   test.js:21:15
   21| class BazK<in K extends {}, V> {
                     ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:28:43

Cannot use `V` [1] in an output position because `V` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:28:43
   28|     bad (x: number) : $ReadOnlyWeakMap<K, V> {// Error: V in covariant position
                                                 ^

References:
   test.js:27:29
   27| class BazV<K extends {}, in V> {
                                   ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:42:43

Cannot use `K` [1] in an input/output position because `K` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:42:43
   42|         bad (x: number) : ReadonlyWeakMap<K, V> { // Error: K in invariant position
                                                 ^

References:
   test.js:41:20
   41|     class FooK<out K extends {}, V> {
                          ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:54:43

Cannot use `K` [1] in an input/output position because `K` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:54:43
   54|         bad (x: number) : ReadonlyWeakMap<K, V> {// Error: K in covariant position
                                                 ^

References:
   test.js:53:19
   53|     class BazK<in K extends {}, V> {
                         ^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:60:46

Cannot use `V` [1] in an output position because `V` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:60:46
   60|         bad (x: number) : ReadonlyWeakMap<K, V> {// Error: V in covariant position
                                                    ^

References:
   test.js:59:33
   59|     class BazV<K extends {}, in V> {
                                       ^ [1]



Found 6 errors
